--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,7 @@
 # Starter pipeline
+- task: ContainerBuild@0
+  inputs:
+    Dockerfile: 'Dockerfile'
 
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
